Added in #POST and #GET (all) controllers and tests, fixed bug in Swagger
